<resources>
    <string name="app_name">RunExplorer</string>
    <string name="title_activity_route_preview">Map</string>
    <string name="route_preview">My Routes</string>
    <string name="distance">distance: </string>
    <string name="time">time: </string>
    <string name="send_route_data">Run with watch</string>
    <string name="NoPeersFound">No peers found</string>
    <string name="ConnectionFailure">Connection failure</string>
    <string name="send_route">Send route to watch</string>
    <string name="stop">stop</string>
    <string name="choose_route">Preview</string>
    <string name="timePer100">Time:</string>
    <string name="title_activity_route_search">Map</string>
    <string name="user">By user</string>
    <string name="search">search</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="login_btn_text">login</string>
    <string name="register_text">No account yet? Click here to register</string>
    <string name="hint_repeat_password">repeat password</string>
    <string name="register_btn">register</string>
    <string name="logout_btn">logout</string>
    <string name="new_route_btn">Run with watch</string>
    <string name="name_title">name:</string>
    <string name="date_title">date:</string>
    <string name="time_title">time:</string>
    <string name="distance_title">distance:</string>
    <string name="save_route_data">Save</string>
    <string name="back_btn">back</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="username_hint">username</string>
    <string name="distance_search">By distance</string>
    <string name="radius_tv">Radius:</string>
    <string name="connect">Connect</string>
    <string name="delete">Delete</string>
    <string name="no_routes_found">No routes found</string>
    <string name="rename">Rename</string>
    <string name="reconnect">Reconnect</string>
</resources>
