<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="polsl.engineer.runexplorer.Activities.MainActivity">

    <Button
        android:id="@+id/route_list_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/route_preview"
        android:onClick="routeLists"/>

    <Button
        android:id="@+id/route_search_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:onClick="searchRoute"/>

    <Button
        android:id="@+id/new_route_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_route_btn"
        android:onClick="newRoute"/>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_btn"
        android:onClick="logout"/>


</LinearLayout>
