<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:weightSum="16"
    android:background="@drawable/gradient_background"
    tools:context="polsl.engineer.runexplorer.activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:scaleX="5"
        android:scaleY="5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="7"
        android:src="@drawable/ic_icon" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_weight="4"
        android:gravity="bottom">

        <EditText
            android:id="@+id/username_et"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/primaryText"
            android:textColorLink="@color/primaryText"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:drawableStart="@drawable/ic_login"
            android:hint="@string/hint_username" />


        <EditText
            android:id="@+id/password_et"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/primaryText"
            android:textColorLink="@color/primaryText"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_below="@id/username_et"
            android:drawableStart="@drawable/ic_lock"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5">

        <Button
            android:id="@+id/login_btn"
            android:text="@string/login_btn_text"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="6"
            />

        <TextView
            android:id="@+id/register_tv"
            android:textColor="@color/primaryText"
            android:layout_marginTop="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_btn"
            android:gravity="center"
            android:text="@string/register_text"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>
</LinearLayout>
